--- a/modules/backend/assets/less/layout/sidenav.less
+++ b/modules/backend/assets/less/layout/sidenav.less
@@ -83,7 +83,16 @@
     }
 }
 
-@media (max-width: @screen-xs) {
+@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    #layout-sidenav {
+        font-size: 12px;
+    }
+    .layout-sidenav-container {
+        width: 100px;
+    }
+}
+
+@media (max-width: @screen-xs-max) {
     #layout-sidenav {
         font-size: 10px;
     }
